<resources>
    <string name="app_name">Quiz</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="cnf_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="previous_button">Previous</string>
    <string name="next_button">Next</string>
    <string name="question_earth">Asia is Earth\'s largest continent.</string>
    <string name="question_river">The Jordan river runs through Baghdad.</string>
    <string name="question_lake">Canada has the most natural lakes.</string>
    <string name="question_coast">The Ardiatic Sea is the only sea without any coasts.</string>
    <string name="question_dry">The McMurdo Dry Valleys in Antactica is the driest place on Earth.</string>
    <string name="question_pyramid">Egypt is an African nation that has the most pyramids.</string>
    <string name="question_oldest">Damascus, the capital of Syria is the oldest city in the world.</string>
    <string name="question_flat">South America is the flattest continent.</string>
    <string name="question_mount">Mount Everest is the tallest mountain in the world.</string>
    <string name="question_moon">Mount Everest is the mountain is closest to the Moon.</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgement_toast">Cheating is wrong.</string>
    <string name="title_activity_cheat">Cheat Title</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="correct_result">Correct Answers:</string>
    <string name="wrong_result">Wrong Answers:</string>
    <string name="cheated_result">Cheated answers:</string>
    <string name="try_again">Try again</string>
    <string name="result_title">Result</string>
    <string name="btn_logout">logout</string>
    <string name="logout_btn">LOGOUT</string>
    <string name="you_have">You have:</string>
</resources>
